# Simulacra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_msvc.bat  conanfile.py  conanfile.txt
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: compute.glsl  default-screen.glsl  default.glsl  main.frag  main.vert  user-define.glsl
Sandbox/src/: .Sandbox.c.swp  Camera.cpp  Camera.h  GameObject.h  Intersect.cpp  Intersect.h  Main.cpp  Material.cpp  Material.h  Ray.cpp  Ray.h  Sandbox.c  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
Sandbox/src/Terrain/: Terrain.cpp  Terrain.h
Sandbox/src/pbrt/: pbrt.h
Sandbox/src/pbrt/core/: Error.h  Geometry.h
Simulacra/: CMakeLists.txt  Simulacra.h  spch.cpp  spch.h
Simulacra/src/: Application.cpp  Application.h  Camera.h  EntryPoint.h  Event.h  FileManager.cpp  FileManager.h  Input.cpp  Layer.h  Log.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h  application.c  application.h  entry_point.h  types.h  window.h
Simulacra/src/Core/: Application.cpp  Application.h  EntryPoint.h  Event.h  FileManager.cpp  FileManager.h  Input.cpp  Input.h  Layer.h  Log.cpp  Logger.cpp  Logger.h  Threads.cpp  Threads.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Simulacra/src/Events/: Event.h  InputEvents.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Simulacra/src/ImGui/: ImGui.cpp  ImGui.h
Simulacra/src/Platform/: FileSystem.cpp  FileSystem.h  GraphicsContext.h  PlatformUtils.h  SDL2WIndows.cpp  SDL2Windows.h  SDLWindow.cpp  Window.cpp  Window.h
Simulacra/src/Platform/Linux/: FileSystem.cpp  FileSystem.h
Simulacra/src/Platform/OpenGL/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  GLBuffers.cpp  GLBuffers.h  GLFramebuffer.cpp  GLFramebuffer.h  GLRenderer.cpp  GLRenderer.h  GLShaders.cpp  GLShaders.h  GLTexture.cpp  GLTexture.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLDebug.cpp  OpenGLDebug.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  Renderer2DAPI.cpp  RendererAPI.cpp  Shader.cpp  Shader.h  Shaders.cpp  Texture.cpp  Texture.h
Simulacra/src/Platform/SDL/: SDLFileManager.cpp  SDLOpenGLContext.cpp  SDLOpenGLContext.h  SDLWindow.cpp  SDLWindow.h
Simulacra/src/Platform/SDL2/: SDL2.cpp  SDL2.h
Simulacra/src/Platform/Windows/: SDL2WIndows.cpp  SDL2WindowsTime.cpp  SDLWindow.cpp  Win32FileManager.cpp  Win32Window.cpp  Win32Window.h  WinFileSystem.cpp  WinFileSystem.h  WindowsFileSystem.cpp  WindowsFileSystem.h
Simulacra/src/Renderer/: OrthographicCamera.cpp  OrthographicCamera.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h
Simulacra/src/Simulacra/: Application.cpp  Application.h  Camera.cpp  Camera.h  Filesystem.cpp  Filesystem.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Time.h  Window.h
Simulacra/src/Simulacra/Renderer/: Renderer.cpp  Renderer.h
Simulacra/src/platform/: simulacra_win32.c  simulacra_win32.h  win32_entry_point.h
assets/shaders/: fragment.fs  vertex.vs
src/: Main.cpp  Simulacra.h
src/Core/: Application.cpp  Application.h
src/Platform/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLBufferLayout.cpp  GLBufferLayout.h  GLDebug.cpp  GLDebug.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  OpenGL.cpp  OpenGL.h
src/Platform/Windows/: Window.cpp  Window.h
